infra/k8s/10-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-ticket
  namespace: miniticket
spec:
  replicas: 1
  selector:
    matchLabels: { app: postgres-ticket }
  template:
    metadata:
      labels: { app: postgres-ticket }
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports: [{ containerPort: 5432 }]
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-ticket
  namespace: miniticket
spec:
  selector: { app: postgres-ticket }
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-comment
  namespace: miniticket
spec:
  replicas: 1
  selector:
    matchLabels: { app: postgres-comment }
  template:
    metadata:
      labels: { app: postgres-comment }
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports: [{ containerPort: 5432 }]
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-comment
  namespace: miniticket
spec:
  selector: { app: postgres-comment }
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user
  namespace: miniticket
spec:
  replicas: 1
  selector:
    matchLabels: { app: postgres-user }
  template:
    metadata:
      labels: { app: postgres-user }
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports: [{ containerPort: 5432 }]
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-user
  namespace: miniticket
spec:
  selector: { app: postgres-user }
  ports:
    - port: 5432
      targetPort: 5432
