infra/k8s/20-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: miniticket
spec:
  replicas: 1
  selector:
    matchLabels: { app: redis }
  template:
    metadata:
      labels: { app: redis }
    spec:
      containers:
        - name: redis
          image: redis:7
          ports: [{ containerPort: 6379 }]
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: miniticket
spec:
  selector: { app: redis }
  ports:
    - port: 6379
      targetPort: 6379
