infra/k8s/30-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: miniticket
spec:
  replicas: 1
  selector:
    matchLabels: { app: zookeeper }
  template:
    metadata:
      labels: { app: zookeeper }
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.6.1
          ports: [{ containerPort: 2181 }]
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: miniticket
spec:
  selector: { app: zookeeper }
  ports:
    - port: 2181
      targetPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: miniticket
spec:
  replicas: 1
  selector:
    matchLabels: { app: kafka }
  template:
    metadata:
      labels: { app: kafka }
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.1
          ports: [{ containerPort: 9092 }]
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: miniticket
spec:
  selector: { app: kafka }
  ports:
    - port: 9092
      targetPort: 9092
