infra/k8s/41-keycloak-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-external
  namespace: miniticket
spec:
  type: LoadBalancer
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
