infra/k8s/50-ticket-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service
  namespace: miniticket
spec:
  replicas: 1
  selector:
    matchLabels: { app: ticket-service }
  template:
    metadata:
      labels: { app: ticket-service }
    spec:
      containers:
        - name: ticket-service
          image: miniticketacr12345.azurecr.io/miniticket/ticket-service:latest
          ports: [{ containerPort: 8080 }]
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
  namespace: miniticket
spec:
  selector: { app: ticket-service }
  ports:
    - port: 8080
      targetPort: 8080
