infra/k8s/52-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: miniticket
spec:
  replicas: 1
  selector:
    matchLabels: { app: user-service }
  template:
    metadata:
      labels: { app: user-service }
    spec:
      containers:
        - name: user-service
          image: miniticketacr12345.azurecr.io/miniticket/user-service:latest
          ports: [{ containerPort: 8083 }]
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: miniticket
spec:
  selector: { app: user-service }
  ports:
    - port: 8083
      targetPort: 8083
