infra/k8s/90-api-gateway-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: miniticket
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
    - port: 9001
      targetPort: 9001
